# gpuPlayer

./: .gitmodules  Readme.txt  meson.build
gpuPlayer/: about.cpp  about.h  config.cpp  config.h  externals.cpp  externals.h  gpuPlayer.rc  gpuPlayer.sln  gpuPlayer.vcproj  log.cpp  log.h  menu.cpp  menu.h  options.cpp  options.h  player.cpp  player.h  rebuild.cpp  rebuild.h  reg.h  resource.h  stdafx.cpp  stdafx.h  tabctrl.cpp  tabctrl.h  winmain.cpp  winmain.h
gpuPlayer/res/: manifest.xml
